[gd_scene load_steps=8 format=3 uid="uid://t76ryoci5wxc"]

[ext_resource type="Script" uid="uid://0e65ucvpjgsf" path="res://scripts/goomba.gd" id="1_21hcc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_8tegq"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(32, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21hcc"]
size = Vector2(34, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1jgw"]
size = Vector2(79, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgpj4"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_21hcc"]

[node name="Goomba" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 32769
script = ExtResource("1_21hcc")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0.183333, 1)
self_modulate = Color(0.988235, 0, 0, 1)
texture = SubResource("PlaceholderTexture2D_8tegq")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 15.5)
shape = SubResource("RectangleShape2D_md0e3")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 17)
target_position = Vector2(-100, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_21hcc")

[node name="AreaStartExplosion" type="Area2D" parent="."]
position = Vector2(-9, -8)
scale = Vector2(1.44, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaStartExplosion"]
position = Vector2(16.5, 16)
shape = SubResource("RectangleShape2D_s1jgw")

[node name="HowMuchTimeToExplodeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AreaExplosion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaExplosion"]
position = Vector2(16, 15)
scale = Vector2(10.9979, 5.89238)
shape = SubResource("RectangleShape2D_fgpj4")

[node name="ExplosionSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(16, 15)
scale = Vector2(219.927, -118.559)
texture = SubResource("PlaceholderTexture2D_21hcc")

[node name="QueueFreeTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="AreaStartExplosion" to="." method="_on_area_start_explosion_body_entered"]
[connection signal="timeout" from="HowMuchTimeToExplodeTimer" to="." method="_on_how_much_time_to_explode_timer_timeout"]
[connection signal="body_entered" from="AreaExplosion" to="." method="_on_area_explosion_body_entered"]
[connection signal="timeout" from="QueueFreeTimer" to="." method="_on_queue_free_timer_timeout"]
